--- a/style/about-us.css
+++ b/style/about-us.css
@@ -1,18 +1,3 @@
-#about-us-main {
-	background-image: url("../assets/images/home-background.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: calc(100vh - 68px);
-}
-#about-us-main #content--wrapper {
-	background-image: linear-gradient(
-		to left,
-		rgba(255, 255, 255, 0.3),
-		/* low opacity */ rgba(255, 255, 255, 1) /* high opacity */
-	);
-	height: calc(100vh - 90px);
-	padding: 0 40px;
-}
 #about-us-main article.top {
 	padding-top: 2rem;
 	padding-left: 10rem;
@@ -30,13 +15,14 @@
 	text-transform: uppercase;
 }
 #our-team {
+	margin-top: 50px;
 	padding: 40px 0;
 	display: flex;
 	justify-content: space-between;
 	width: 90%;
 }
 #our-team h3 {
-	font-size: 3.2rem;
+	font-size: 3.6rem;
 	color: var(--blue);
 	text-transform: uppercase;
 	margin-left: 25rem;
@@ -47,11 +33,20 @@
 #our-team #teams {
 	display: flex;
 	justify-content: end;
+	gap: 10px;
 	width: 60%;
 }
 #our-team .team {
 	width: 33%;
 	padding: 1rem 2rem;
+	background-color: var(--blue);
+}
+#our-team .team .header--team {
+	display: flex;
+}
+#our-team .team .header--team img {
+	width: 40px;
+	margin-right: 10px;
 }
 #our-team .team span {
 	font-size: 18px;
@@ -61,14 +56,14 @@
 	display: inline-block;
 }
 #our-team .team p {
-	color: var(--blue);
+	color: white;
 	margin-top: 20px;
 	line-height: 26px;
 }
 #our-team .team h3 {
 	margin-left: 0;
 	padding: 0;
-	font-size: 2rem;
-	color: var(--blue);
+	font-size: 1.4rem;
+	color: white;
 	text-transform: uppercase;
 }
