--- a/style/master.css
+++ b/style/master.css
@@ -47,15 +47,61 @@ header #right {
 	width: 30px;
 	height: 30px;
 }
+main {
+	display: flex;
+	background-image: url("../assets/images/home-background.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: calc(100vh - 68px);
+}
+main #content--wrapper {
+	width: calc(100% - 60px);
+	height: calc(100vh - 90px);
+	background-image: linear-gradient(
+		to left,
+		rgba(255, 255, 255, 0.3),
+		/* low opacity */ rgba(255, 255, 255, 1) /* high opacity */
+	);
+}
 .btn-action {
 	text-transform: uppercase;
 	border: none;
 	color: white;
 	font-weight: bold;
 	background-color: var(--blue);
+	cursor: pointer;
 }
 .btn-action.normal {
+	border-radius: 25px;
 	margin-top: 40px;
 	padding: 1rem 2rem;
 	font-size: 16px;
+}
+aside {
+	display: flex;
+	width: 60px;
+	background-color: white;
+	height: calc(100vh - 68px);
+}
+aside #social {
+	list-style: none;
+	padding-left: 10px;
+	padding-right: 10px;
+	display: flex;
+	margin-bottom: 20px;
+	padding-bottom: 60px;
+	flex-wrap: wrap;
+	display: inline-block;
+	align-self: flex-end;
+}
+aside #social li {
+	margin: 20px 0;
+}
+aside a {
+	padding: 4px;
+	display: block;
+}
+aside a img {
+	width: 100%;
+	height: 40px;
 }
